// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderSection renders when not provisioned 1`] = `
<Panel.LEGACY.Section
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "Provision SSO",
        "disabled": false,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Identity Provider"
  >
    <h6>
      Not provisioned
    </h6>
  </LabelledValue>
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <Connect(ReduxForm)
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </Modal.LEGACY>
</Panel.LEGACY.Section>
`;

exports[`ProviderSection renders when provisioned 1`] = `
<Panel.LEGACY.Section
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "Provision SSO",
        "disabled": false,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Identity Provider"
  >
    <h6>
      https://sso.sparkpost.com/redirect
    </h6>
  </LabelledValue>
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <Connect(ReduxForm)
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </Modal.LEGACY>
</Panel.LEGACY.Section>
`;
